# Megumax

./: .gitmodules  CMakeLists.txt  LICENSE
src/: main.cpp  misc.h  rng_service.cpp  rng_service.h  search.cpp  search_globals.cpp  search_globals.h
src/eval/: eval.cpp  eval.h  masks.h  pst.cpp  pst.h
src/search/mcts/: alphabeta.h  eval.cpp  eval.h  pst.h  search.cpp  search.h  uct_node.cpp  uct_node.h
